nuget config for Hackney.core

--- a/TenureInformationApi/Dockerfile
+++ b/TenureInformationApi/Dockerfile
@@ -1,16 +1,19 @@
 FROM mcr.microsoft.com/dotnet/core/sdk:3.1
 
+ARG LBHPACKAGESTOKEN
+ENV LBHPACKAGESTOKEN=$LBHPACKAGESTOKEN
 WORKDIR /app
 
 # Copy csproj and restore as distinct layers
-COPY *.csproj ./
+COPY ./TenureInformationApi/TenureInformationApi.csproj ./
 COPY /nuget.config /root/.nuget/NuGet/NuGet.Config
-RUN dotnet restore
+RUN dotnet restore ./TenureInformationApi.csproj
+
 
 # Copy everything else and build
-COPY . ./
-RUN dotnet build -c Release -o out
-RUN dotnet publish -c Release -o out
+COPY ./TenureInformationApi ./
+RUN dotnet build -c Release -o out ./TenureInformationApi.csproj
+RUN dotnet publish -c Release -o out ./TenureInformationApi.csproj
 
 EXPOSE ${PORT:-3000}
 CMD ASPNETCORE_URLS=http://+:${PORT:-3000} dotnet ./out/TenureInformationApi.dll
