--- a/TenureInformationApi/Properties/launchSettings.json
+++ b/TenureInformationApi/Properties/launchSettings.json
@@ -9,7 +9,7 @@
     }
   },
   "profiles": {
-    "base_api": {
+    "tenure_info_api": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "api/v1/healthcheck/ping",
