Create tenure event raised

--- a/TenureInformationApi/Properties/launchSettings.json
+++ b/TenureInformationApi/Properties/launchSettings.json
@@ -17,7 +17,8 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "LocalDevelopment",
         "DynamoDb_LocalMode": "true",
-        "DynamoDb_LocalServiceUrl": "http://localhost:8000"
+        "DynamoDb_LocalServiceUrl": "http://localhost:8000",
+        "Localstack_SnsServiceUrl": "http://localhost:4566"
       }
     }
   }
