--- a/TenureInformationApi/TenureInformationApi.csproj
+++ b/TenureInformationApi/TenureInformationApi.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="FluentValidation.AspNetCore" Version="10.2.0" />
     <PackageReference Include="Hackney.Core.DynamoDb" Version="1.30.0" />
     <PackageReference Include="Hackney.Core.HealthCheck" Version="1.30.0" />
+    <PackageReference Include="Hackney.Core.Http" Version="1.30.0" />
     <PackageReference Include="Hackney.Core.JWT" Version="1.30.0" />
     <PackageReference Include="Hackney.Core.Logging" Version="1.30.0" />
     <PackageReference Include="Hackney.Core.Middleware" Version="1.30.0" />
