--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
      - AWS_SECRET_ACCESS_KEY=local
     links:
       - dynamodb-database
+      - localstack-tenure-information-api
 
   tenure-information-api-test:
     image: tenure-information-api-test
@@ -29,13 +30,13 @@ services:
     environment:
       - DynamoDb_LocalMode=true
       - DynamoDb_LocalServiceUrl=http://dynamodb-database:8000
-      - Localstack_SnsServiceUrl=http://localstack:4566
+      - Localstack_SnsServiceUrl=http://localstack-tenure-information-api:4566
       - AWS_REGION=eu-west-2
       - AWS_ACCESS_KEY_ID=local
       - AWS_SECRET_ACCESS_KEY=local
     links:
       - dynamodb-database
-      - localstack
+      - localstack-tenure-information-api
 
 
   dynamodb-database:
@@ -43,8 +44,7 @@ services:
     ports:
       - 8000:8000
 
-  localstack:
-    container_name: "${LOCALSTACK_DOCKER_NAME-localstack_main}"
+  localstack-tenure-information-api:
     image: localstack/localstack    
     hostname: awslocal    
     ports:
