added x-correlation-id header

--- a/TenureInformationApi/serverless.yml
+++ b/TenureInformationApi/serverless.yml
@@ -41,6 +41,7 @@ functions:
               - X-Api-Key
               - X-Amz-Security-Token
               - X-Amz-User-Agent
+              - x-correlation-id
             allowCredentials: false
       - http:
           path: /swagger/{proxy+}
