--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,7 +51,7 @@ services:
     ports:
       - "4566:4566"      
     environment:
-      - SERVICES=sns
+      - SERVICES=sns,sqs
       - DEBUG=1                  
       - DOCKER_HOST=unix:///var/run/docker.sock
       - HOST_TMP_FOLDER=/tmp/localstack      
