--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       - 3000:3000
     environment:
      - DynamoDb_LocalMode=true
+     - Sns_LocalMode=true
      - DynamoDb_LocalServiceUrl=http://dynamodb-database:8000
      - Localstack_SnsServiceUrl=http://localstack-tenure-information-api:4566
      - AWS_REGION=eu-west-2
@@ -30,6 +31,7 @@ services:
         - LBHPACKAGESTOKEN=${LBHPACKAGESTOKEN}
     environment:
       - DynamoDb_LocalMode=true
+      - Sns_LocalMode=true
       - DynamoDb_LocalServiceUrl=http://dynamodb-database:8000
       - Localstack_SnsServiceUrl=http://localstack-tenure-information-api:4566
       - AWS_REGION=eu-west-2
