--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -162,7 +162,8 @@ jobs:
 workflows:
   check-and-deploy-development:
     jobs:
-      - check-code-formatting
+      - check-code-formatting:
+          context: api-nuget-token-context
       - build-and-test:
           context: SonarCloud
       - assume-role-development:
