fixing issue with circleci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -106,7 +106,7 @@ jobs:
       - setup_remote_docker
       - run:
           name: build
-          command: docker-compose build tenure-information-api-test
+          command: docker-compose build --build-arg LBHPACKAGESTOKEN=%LBHPACKAGESTOKEN% tenure-information-api-test
       - run:
           name: Run tests
           command: docker-compose run tenure-information-api-test
