--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,6 @@ orbs:
   aws-ecr: circleci/aws-ecr@3.0.0
   aws-cli: circleci/aws-cli@0.1.9
   aws_assume_role: lbh-hackit/aws_assume_role@0.1.0
-  sonarcloud: sonarsource/sonarcloud@1.0.2
 
 
 executors:
@@ -106,7 +105,6 @@ jobs:
     steps:
       - checkout
       - setup_remote_docker
-      - sonarcloud/scan
       - run:
           name: build
           command: docker-compose build tenure-information-api-test
@@ -196,7 +194,9 @@ workflows:
       - check-code-formatting:
           context: api-nuget-token-context
       - build-and-test:
-          context: api-nuget-token-context
+          context: 
+              - api-nuget-token-context
+              - SonarCloud
           filters:
             branches:
               only: release
