--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -256,9 +256,9 @@ workflows:
       - terraform-apply-development:
           requires:
             - terraform-compliance-development
-          filters:
-            branches:
-              only: master
+          # filters:
+          #   branches:
+          #     only: master
       - deploy-to-development:
           context: api-nuget-token-context
           requires:
