Install plugin in circleci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -118,7 +118,9 @@ commands:
             apt-get update && apt-get install -y nodejs
       - run:
           name: Install serverless CLI
-          command: npm i -g serverless
+          command: |
+            npm i -g serverless
+            serverless plugin install -n serverless-associate-waf
       - run:
           name: Build lambda
           command: |
