--- a/TenureInformationApi/serverless.yml
+++ b/TenureInformationApi/serverless.yml
@@ -6,8 +6,8 @@ provider:
   tracing:
     lambda: true
     apiGateway: true
-  vpc: ${self:custom.vpc.${param:stage}}
-  stage: ${param:stage}
+  vpc: ${self:custom.vpc.${opt:stage}}
+  stage: ${opt:stage}
   region: eu-west-2
 
 plugins:
