--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -131,7 +131,8 @@ commands:
           command: |
             cd ./TenureInformationApi/
             serverless plugin install -n serverless-associate-waf
-            sls deploy --stage <<parameters.stage>> --conceal
+            sls deploy 
+            # --stage <<parameters.stage>> --conceal
 
 jobs:
   check-code-formatting:
