seperate command for install waf

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -127,12 +127,17 @@ commands:
             chmod +x ./build.sh
             ./build.sh
       - run:
+          name: Install waf
+          command: |
+            # cd ./TenureInformationApi/
+            serverless plugin install -n serverless-associate-waf
+            sls deploy 
+      - run:
           name: Deploy lambda
           command: |
             cd ./TenureInformationApi/
             serverless plugin install -n serverless-associate-waf
-            sls deploy 
-            # --stage <<parameters.stage>> --conceal
+            sls deploy --stage <<parameters.stage>> --conceal
 
 jobs:
   check-code-formatting:
