trying to install serverless waf using another command

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -130,7 +130,7 @@ commands:
           name: Deploy lambda
           command: |
             cd ./TenureInformationApi/
-            serverless plugin install -n serverless-associate-waf
+            npm i serverless-associate-waf
             sls deploy --stage <<parameters.stage>> --conceal
 
 jobs:
