--- a/TenureInformationApi/serverless.yml
+++ b/TenureInformationApi/serverless.yml
@@ -133,15 +133,67 @@ resources:
                           - Ref: 'AWS::Region'
                           - Ref: 'AWS::AccountId'
                           - 'table/TenureInformation'
-    wafAcl:
-      Type: AWS::WAFv2::WebACLAssociation
-      Properties: 
-        ResourceArn: String
-        WebACLArn: String
+      WebACL:
+        Type: 'AWS::WAFv2::WebACL'
+        Properties:
+          Name: Tenure API Web ACL 
+          Scope: REGIONAL
+          DefaultAction:
+            Allow:
+              CustomRequestHandling:
+                InsertHeaders:
+                  - Name: AllowActionHeader1Name
+                    Value: AllowActionHeader1Value
+                  - Name: AllowActionHeader2Name
+                    Value: AllowActionHeader2Value
+          VisibilityConfig:
+            SampledRequestsEnabled: true
+            CloudWatchMetricsEnabled: true
+            MetricName: WebACLMetric
+          Rules:
+            - Name: RuleWithAWSManagedRules
+              Priority: 0
+              OverrideAction:
+                Count: {}
+              VisibilityConfig:
+                SampledRequestsEnabled: true
+                CloudWatchMetricsEnabled: true
+                MetricName: RuleWithAWSManagedRulesMetric
+              Statement:
+                ManagedRuleGroupStatement:
+                  VendorName: AWS
+                  Name: AWSManagedRulesCommonRuleSet
+                  ExcludedRules: []
+            - Name: BlockXssAttack
+              Priority: 1
+              Action:
+                Block:
+                  CustomResponse:
+                    ResponseCode: 503
+                    CustomResponseBodyKey: CustomResponseBodyKey1
+                    ResponseHeaders:
+                      - Name: BlockActionHeader1Name
+                        Value: BlockActionHeader1Value
+                      - Name: BlockActionHeader2Name
+                        Value: BlockActionHeader2Value
+              VisibilityConfig:
+                SampledRequestsEnabled: true
+                CloudWatchMetricsEnabled: true
+                MetricName: BlockXssAttackMetric
+              Statement:
+                XssMatchStatement:
+                  FieldToMatch:
+                    AllQueryArguments: {}
+                  TextTransformations:
+                    - Priority: 1
+                      Type: NONE
+            - Name: KnownBadInputsRuleSet
+              Priority: 2 
+              
 
 custom:
   associateWaf:
-      name: tenure-information-api-waf-acl
+      name: Tenure API Web ACL 
   vpc:
     development:
       subnetIds:
