Add sonarcloud scan

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -148,6 +148,7 @@ jobs:
     steps:
       - checkout
       - setup_remote_docker
+      - sonarcloud/scan
       - run:
           name: build
           command: docker-compose build tenure-information-api-test
