update to .net6 with minimal impact on nuget packages

--- a/TenureInformationApi/serverless.yml
+++ b/TenureInformationApi/serverless.yml
@@ -1,7 +1,7 @@
 service: tenure-information-api
 provider:
   name: aws
-  runtime: dotnetcore3.1
+  runtime: dotnet6
   memorySize: 2048
   tracing:
     lambda: true
@@ -14,7 +14,7 @@ plugins:
   - serverless-associate-waf
   - '@serverless/safeguards-plugin'
 package:
-  artifact: ./bin/release/netcoreapp3.1/tenure-information-api.zip
+  artifact: ./bin/release/net6.0/tenure-information-api.zip
 
 functions:
   TenureInformationApi:
