--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,7 @@ orbs:
   aws-cli: circleci/aws-cli@0.1.9
   aws_assume_role: lbh-hackit/aws_assume_role@0.1.0
   sonarcloud: sonarsource/sonarcloud@1.1.1
+  grafana: grafana/k6@1.1.3
 
 executors:
   docker-python:
@@ -132,6 +133,17 @@ commands:
             npm i serverless-associate-waf
             npm i @serverless/safeguards-plugin --save-dev
             sls deploy --stage <<parameters.stage>> --conceal
+  run-api-load-testing:
+    description: run k6 tests
+    parameters:
+      apiToken:
+        type: string
+      apiFullUrl:
+        type: string
+    steps:
+      - grafana/k6:
+            arguments: --env TOKEN=<<parameters.apiToken>> --env API_URL=<<parameters.apiFullUrl>>
+            script: scripts/performance-testing-script.js
 jobs:
   check-code-formatting:
     executor: docker-dotnet
@@ -230,10 +242,18 @@ jobs:
     steps:
       - deploy-lambda:
           stage: "production"
+  api-performance-testing-development:
+    executor: docker-python
+    steps:
+      - run-api-load-testing:
+          apiToken: $AUTH_TOKEN_DEVELOPMENT
+          apiFullUrl: $API_URL_LOAD_TESTING
 
 workflows:
   check-and-deploy-development:
     jobs:
+      - api-performance-testing-development:
+          context: mtfh-mfe-e2e-tests
       - check-code-formatting:
           context: api-nuget-token-context
       - build-and-test:
