--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ orbs:
   aws-cli: circleci/aws-cli@0.1.9
   aws_assume_role: lbh-hackit/aws_assume_role@0.1.0
   sonarcloud: sonarsource/sonarcloud@1.1.1
-  grafana: grafana/k6@1.1.3
+  k6: k6io/test@1.2.3
 
 executors:
   docker-python:
@@ -141,7 +141,7 @@ commands:
       apiFullUrl:
         type: string
     steps:
-      - grafana/k6:
+      - k6/test:
             arguments: --env TOKEN=<<parameters.apiToken>> --env API_URL=<<parameters.apiFullUrl>>
             script: scripts/performance-testing-script.js
 jobs:
