--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ orbs:
   aws-cli: circleci/aws-cli@0.1.9
   aws_assume_role: lbh-hackit/aws_assume_role@0.1.0
   sonarcloud: sonarsource/sonarcloud@1.1.1
-  k6: k6io/test@1.2.3
+  grafana: grafana/k6@1.1.3
 
 executors:
   docker-python:
@@ -133,17 +133,6 @@ commands:
             npm i serverless-associate-waf
             npm i @serverless/safeguards-plugin --save-dev
             sls deploy --stage <<parameters.stage>> --conceal
-  run-api-load-testing:
-    description: run k6 tests
-    parameters:
-      apiToken:
-        type: string
-      apiFullUrl:
-        type: string
-    steps:
-      - k6/test:
-            arguments: --env TOKEN=<<parameters.apiToken>> --env API_URL=<<parameters.apiFullUrl>>
-            script: scripts/performance-testing-script.js
 jobs:
   check-code-formatting:
     executor: docker-dotnet
@@ -245,9 +234,9 @@ jobs:
   api-performance-testing-development:
     executor: docker-python
     steps:
-      - run-api-load-testing:
-          apiToken: $AUTH_TOKEN_DEVELOPMENT
-          apiFullUrl: $API_URL_LOAD_TESTING
+      - grafana/k6:
+            arguments: --env TOKEN=$AUTH_TOKEN_DEVELOPMENT--env API_URL=$API_URL_LOAD_TESTING
+            script: scripts/performance-testing-script.js    
 
 workflows:
   check-and-deploy-development:
