--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,4 @@ testresults/
 
 # Ignore local stack as it is not required on GitHub (it's auto generated)
 .localstack
+/TenureInformationApi/Properties/launchSettings.json
