--- a/TenureInformationApi/serverless.yml
+++ b/TenureInformationApi/serverless.yml
@@ -23,6 +23,7 @@ functions:
     role: lambdaExecutionRole
     environment:
       TENURE_SNS_ARN: ${ssm:/sns-topic/${self:provider.stage}/tenure/arn}
+      EDIT_CHARGES_ALLOWED_GROUPS: ${ssm:/housing-tl/${self:provider.stage}/tenure-edit-charges-allowed-groups}
     events:
       - http:
           path: /{proxy+}
