--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -148,7 +148,7 @@ jobs:
     steps:
       - checkout
       - setup_remote_docker
-      - sonarcloud/scan
+      - SonarCloud
       - run:
           name: build
           command: docker-compose build tenure-information-api-test
