Ensure the packages that may be shared are up-to-date
Even though the likelihood of this being a problem is low due to this image pointing to the latest version alpine base image.

--- a/TenureInformationApi.Tests/Dockerfile
+++ b/TenureInformationApi.Tests/Dockerfile
@@ -14,8 +14,9 @@ ENV SONAR_TOKEN=$SONAR_TOKEN
 
 WORKDIR /app
 
-# Sync/update the environment  && apk upgrade --no-cache 140MB
-RUN apk update
+# Sync/update the environment
+RUN apk update \
+ && apk upgrade --no-cache
 
 # Update the system & install java binaries (for sonar)
 RUN apk add --no-cache openjdk17
