Add explicit main project DLLs build to a separate docker layer to optimise image rebuild time.
It turns out that the whole main project is being built implicitly regardless of what classes are being consumed by the tests project. The tests project may as well use nothing from the main project, but so long as the 2 projects are linked through their csproj, if the main project wasn't built in full, the tests project build will complain. Seems build process is not optimised in dotnet.

--- a/TenureInformationApi.Tests/Dockerfile
+++ b/TenureInformationApi.Tests/Dockerfile
@@ -41,8 +41,11 @@ COPY . .
 # Restore main & tests project
 RUN dotnet restore
 
+# Build dependency project DLLs
+RUN dotnet build ./TenureInformationApi/TenureInformationApi.csproj --no-restore --no-dependencies
+
 # Build tests project
-RUN dotnet build --no-restore ./TenureInformationApi.Tests/TenureInformationApi.Tests.csproj
+RUN dotnet build ./TenureInformationApi.Tests/TenureInformationApi.Tests.csproj --no-restore
 
 CMD dotnet test ./TenureInformationApi.Tests/TenureInformationApi.Tests.csproj --no-build --collect:"XPlat Code Coverage" --results-directory ./coverage \
     && reportgenerator "-reports:./coverage/*/coverage.cobertura.xml" "-targetdir:coverage" "-reporttypes:SonarQube" "-verbosity:Off" \
