Clean up the pipeline for deployment testing.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,18 +1,12 @@
 version: 2.1
 
 orbs:
-  aws-ecr: circleci/aws-ecr@3.0.0
-  aws-cli: circleci/aws-cli@0.1.9
   aws_assume_role: lbh-hackit/aws_assume_role@0.1.0
-  sonarcloud: sonarsource/sonarcloud@2.0.0
 
 executors:
   docker-python:
     docker:
       - image: circleci/python:3.7
-  docker-terraform:
-    docker:
-      - image: "hashicorp/terraform:1.1.9"
   docker-dotnet:
     docker:
       - image: mcr.microsoft.com/dotnet/sdk:6.0-alpine
@@ -35,69 +29,6 @@ commands:
           account: <<parameters.aws-account>>
           profile_name: default
           role: "LBH_Circle_CI_Deployment_Role"
-      - persist_to_workspace:
-          root: *workspace_root
-          paths:
-            - .aws
-  terraform-init-then-plan:
-    description: "Initializes and run plan from terraform configuration"
-    parameters:
-      environment:
-        type: string
-    steps:
-      - *attach_workspace
-      - checkout
-      - run:
-          command: |
-            cd ./terraform/<<parameters.environment>>/
-            terraform get -update=true
-            terraform init
-          name: get and init
-      - run:
-          name: plan
-          command: |
-            cd ./terraform/<<parameters.environment>>/
-            terraform plan -out=plan.out
-      - persist_to_workspace:
-          root: *workspace_root
-          paths:
-            - .aws
-            - project/*
-  terraform-compliance:
-    description: "Run Terraform Compliance checks"
-    parameters:
-      environment:
-        type: string
-    steps:
-      - *attach_workspace
-      - checkout
-      - run:
-          command: |
-            cd ./terraform/<<parameters.environment>>/
-            apk add --update --no-cache python3 && ln -sf python3 /usr/bin/python
-            apk add --update --no-cache g++ gcc libxslt-dev python3-dev
-            python3 -m ensurepip
-            pip3 install --no-cache --upgrade pip setuptools
-            pip install terraform-compliance
-            terraform-compliance -f terraform-compliance/ -p plan.out
-          name: terraform compliance
-      - persist_to_workspace:
-          root: *workspace_root
-          paths:
-            - .aws
-  terraform-apply:
-    description: "Runs Terraform Apply"
-    parameters:
-      environment:
-        type: string
-    steps:
-      - *attach_workspace
-      - checkout
-      - run:
-          name: apply
-          command: |
-            cd ./terraform/<<parameters.environment>>/
-            terraform apply -auto-approve plan.out
       - persist_to_workspace:
           root: *workspace_root
           paths:
@@ -133,219 +64,28 @@ commands:
             npm i @serverless/safeguards-plugin --save-dev
             sls deploy --stage <<parameters.stage>> --conceal
 jobs:
-  check-code-formatting:
-    executor: docker-dotnet
-    steps:
-      - checkout
-      - run:
-          name: Install dotnet format
-          command: dotnet tool install dotnet-format --tool-path ./dotnet-format-local/
-      - run:
-          name: Run formatter check
-          command: ./dotnet-format-local/dotnet-format --check
-  build-and-test:
-    executor: docker-python
-    steps:
-      - checkout
-      - setup_remote_docker
-      - sonarcloud/scan
-      - run:
-          name: build
-          command: docker-compose build tenure-information-api-test
-      - run:
-          name: Run tests
-          command: docker-compose run tenure-information-api-test
   assume-role-development:
     executor: docker-python
     steps:
       - assume-role-and-persist-workspace:
           aws-account: $AWS_ACCOUNT_DEVELOPMENT
-  assume-role-staging:
-    executor: docker-python
-    steps:
-      - assume-role-and-persist-workspace:
-          aws-account: $AWS_ACCOUNT_STAGING
-  assume-role-production:
-    executor: docker-python
-    steps:
-      - assume-role-and-persist-workspace:
-          aws-account: $AWS_ACCOUNT_PRODUCTION
-  terraform-init-and-plan-development:
-    executor: docker-terraform
-    steps:
-      - terraform-init-then-plan:
-          environment: "development"
-  terraform-compliance-development:
-    executor: docker-terraform
-    steps:
-      - terraform-compliance:
-          environment: "development"
-  terraform-apply-development:
-    executor: docker-terraform
-    steps:
-      - terraform-apply:
-          environment: "development"
-  terraform-init-and-plan-staging:
-    executor: docker-terraform
-    steps:
-      - terraform-init-then-plan:
-          environment: "staging"
-  terraform-compliance-staging:
-    executor: docker-terraform
-    steps:
-      - terraform-compliance:
-          environment: "staging"
-  terraform-apply-staging:
-    executor: docker-terraform
-    steps:
-      - terraform-apply:
-          environment: "staging"
-  terraform-init-and-plan-production:
-    executor: docker-terraform
-    steps:
-      - terraform-init-then-plan:
-          environment: "production"
-  terraform-compliance-production:
-    executor: docker-terraform
-    steps:
-      - terraform-compliance:
-          environment: "production"
-  terraform-apply-production:
-    executor: docker-terraform
-    steps:
-      - terraform-apply:
-          environment: "production"
   deploy-to-development:
     executor: docker-dotnet
     steps:
       - deploy-lambda:
           stage: "development"
-  deploy-to-staging:
-    executor: docker-dotnet
-    steps:
-      - deploy-lambda:
-          stage: "staging"
-  deploy-to-production:
-    executor: docker-dotnet
-    steps:
-      - deploy-lambda:
-          stage: "production"
 
 workflows:
   check-and-deploy-development:
     jobs:
-      - check-code-formatting:
-          context: api-nuget-token-context
-      - build-and-test:
-          context:
-            - api-nuget-token-context
-            - SonarCloud
       - assume-role-development:
           context: api-assume-role-housing-development-context
           requires:
             - build-and-test
-      - terraform-init-and-plan-development:
-          requires:
-            - assume-role-development
-      - terraform-compliance-development:
-          requires:
-            - terraform-init-and-plan-development
-      - terraform-apply-development:
-          requires:
-            - terraform-compliance-development
-          filters:
-            branches:
-              only: master
       - deploy-to-development:
           context: api-nuget-token-context
           requires:
             - terraform-apply-development
           filters:
             branches:
-              only: master
-  check-and-deploy-staging-and-production:
-      jobs:
-      - check-code-formatting:
-          context: api-nuget-token-context
-      - build-and-test:
-          context:
-              - api-nuget-token-context
-              - SonarCloud
-          filters:
-            branches:
-              only: release
-      - assume-role-staging:
-          context: api-assume-role-housing-staging-context
-          requires:
-              - build-and-test
-          filters:
-             branches:
-               only: release
-      - terraform-init-and-plan-staging:
-          requires:
-            - assume-role-staging
-          filters:
-            branches:
-              only: release
-      - terraform-compliance-staging:
-          requires:
-            - terraform-init-and-plan-staging
-          filters:
-            branches:
-              only: release
-      - terraform-apply-staging:
-          requires:
-            - terraform-compliance-staging
-          filters:
-            branches:
-              only: release
-      - deploy-to-staging:
-          context: api-nuget-token-context
-          requires:
-            - terraform-apply-staging
-          filters:
-            branches:
-              only: release
-      - permit-production-terraform-release:
-          type: approval
-          requires:
-            - deploy-to-staging
-      - assume-role-production:
-          context: api-assume-role-housing-production-context
-          requires:
-              - permit-production-terraform-release
-          filters:
-             branches:
-               only: release
-      - terraform-init-and-plan-production:
-          requires:
-            - assume-role-production
-          filters:
-            branches:
-              only: release
-      - terraform-compliance-production:
-          requires:
-            - terraform-init-and-plan-production
-          filters:
-            branches:
-              only: release
-      - terraform-apply-production:
-          requires:
-            - terraform-compliance-production
-          filters:
-            branches:
-              only: release
-      - permit-production-release:
-          type: approval
-          requires:
-            - terraform-apply-production
-          filters:
-            branches:
-              only: release
-      - deploy-to-production:
-          context: api-nuget-token-context
-          requires:
-            - permit-production-release
-          filters:
-            branches:
-              only: release
+              only: dummy-dev-depl
