--- a/TenureInformationApi.Tests/Dockerfile
+++ b/TenureInformationApi.Tests/Dockerfile
@@ -49,4 +49,4 @@ RUN dotnet build ./TenureInformationApi.Tests/TenureInformationApi.Tests.csproj 
 
 CMD dotnet test ./TenureInformationApi.Tests/TenureInformationApi.Tests.csproj --no-build --collect:"XPlat Code Coverage" --results-directory ./coverage \
     && reportgenerator "-reports:./coverage/*/coverage.cobertura.xml" "-targetdir:coverage" "-reporttypes:SonarQube" "-verbosity:Off" \
-    && (dotnet sonarscanner end /d:sonar.login="${SONAR_TOKEN}" > /dev/null)
+    && dotnet sonarscanner end /d:sonar.login="${SONAR_TOKEN}"
